--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,9 @@ pinecone
 langchain_text_splitters
 langchain_community
 langchain_classic
+python-multipart
+pypdf
+docx2txt
+unstructured
+pillow
+pytesseract
