--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ python-jose
 fastapi
 uvicorn
 langchain-tavily
-langchain-ollama
+langchain-cohere
 langchain-pinecone
 pinecone
 langchain_text_splitters
