--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ python-jose
 fastapi
 uvicorn
 langchain-tavily
-langchain-cohere
+langchain-ollama
 langchain-pinecone
 pinecone
 langchain_text_splitters
