--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ python-jose
 fastapi
 uvicorn
 langchain-tavily
-langchain_ollama
+langchain-ollama
 langchain-pinecone
 pinecone
 langchain_text_splitters
@@ -18,7 +18,6 @@ langchain_classic
 python-multipart
 pypdf
 docx2txt
-unstructured
 pillow
 pytesseract
 pydantic[email]
